tests/ui/parser/attribute/attr-bad-meta-3.rs
#[path() token] //~ ERROR expected `]`, found `token`
mod m {}

// ferrocene-annotations: fls_gvwd0kf72jt
// Attributes
